# x12-openflow-quickstart

./: .gitattributes  .gitignore  README.md  pyproject.toml  x12_processors-0.5.0.nar  x12_processors-0.6.0.nar
blog/: x12_openflow_quickstart.md
data/: sample_834_10_enrollments.edi  sample_835_10_remittances.edi  sample_837p_20_claims.edi  volume_834_250k.edi  volume_835_250k.edi  volume_837p_500k.edi
docs/: blog_x12_openflow_pipeline.html
guide/screenshots/: README.md
openflow/: Openflow-X12-Flow.json
scripts/: generate_x12_claims.py  generate_x12_enrollments.py  generate_x12_remittances.py
sql/: 00_prerequisites.sql  01_landing_tables.sql  01_x12_pipeline.sql  02_gold_layer.sql
src/x12_processors/: ParseX12ToJSON.py  __init__.py  field_maps.py
tests/: test_parser.py
tests/sample_data/: sample_834.x12  sample_835.x12  sample_837p.x12
